# baikenov-bulat

./: .clang-format  .gitignore  .gitlab-ci.yml  Block.cpp  Block.h  Bot.cpp  Bot.h  CMakeLists.txt  Dockerfile  Game.cpp  Map.cpp  Map.h  README.md  cfg  server.py
include/: AI.h  Board.h  ConnectingState.h  Game.h  GameOverState.h  GameState.h  MainMenuState.h  Network.h  PlacingShipsState.h  Player.h  PlayingState.h  ResourceManager.h  Ship.h
src/: AI.cpp  Board.cpp  ConnectingState.cpp  Game.cpp  GameOverState.cpp  MainMenuState.cpp  Network.cpp  PlacingShipsState.cpp  Player.cpp  PlayingState.cpp  ResourceManager.cpp  Ship.cpp
test/: AI_test.cpp  Board_test.cpp  Game_test.cpp  Network_test.cpp  Player_test.cpp  Ship_test.cpp
